syntax = "proto3";
option java_package = "java.com.util";

service TokenHandler{
  rpc SendToken (TokenMessage) returns (TokenResponse);
}

message TokenMessage {

  message Measurement {
    double value = 1;
    int64 timestamp = 2;

  }

  map<string, Measurement> measurements = 1;
}

message TokenResponse {
  string status = 1;
  string message = 2;
}

//protoc --plugin=protoc-gen-grpc-java=build/exe/java_plugin/protoc-gen-grpc-java --grpc-java_out=src/main --proto_path=src/main/proto TokenMessage.proto